<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PoliticalSecurityActivity"
    android:background="@color/mistyRose">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="12dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@drawable/btn_beta">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/textView53"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/politicalsecuritytitle"
                            android:textAlignment="center"
                            android:textColor="@color/marinian_blue"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView52"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/politicalsecuritywelcome"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView54"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/politicalsecurityitem1"
                            android:textColor="@color/darck_orange"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView56"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/politicalsecuritytextitem1"
                            android:textColor="@color/normal_color"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView55"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/politicalsecurityitem2"
                            android:textColor="@color/darck_orange"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView58"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/politicalsecuritytextitem1"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView51"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/politicalsecurityitem3"
                            android:textColor="@color/darck_orange"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView59"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/politicalsecuritytextitem3"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView60"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/politicalsecuritytext2item3"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView62"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/politicalsecurityitem4"
                            android:textColor="@color/darck_orange"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView61"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/politicalsecuritytextitem4"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView50"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/politicalsecurityitem5"
                            android:textColor="@color/darck_orange"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView65"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/politicalsecuritytextitem5"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView66"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/politicalsecurityitem6"
                            android:textColor="@color/darck_orange"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView67"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/politicalsecuritytextitem6"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView68"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/politicalsecurityitem7"
                            android:textColor="@color/darck_orange"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView69"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/politicalsecuritytextitem7"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView70"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/politicalsecurityitem"
                            android:textColor="@color/federal_blue"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView63"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/privacypolicytitle"
                            android:textColor="@color/marinian_blue"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView64"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/privacypolicycontext"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView57"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/privacyitem1"
                            android:textColor="@color/darck_orange"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView41"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/privacytextitem1"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView42"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/privacyitem2"
                            android:textColor="@color/darck_orange"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView43"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/privacytextitem2"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView44"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/privacytext2titem2"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView45"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/privacyitem3"
                            android:textColor="@color/darck_orange"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView46"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/privacytextitem3"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView47"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/privacytext2item3"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView48"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/privacyitem4"
                            android:textColor="@color/darck_orange"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView49"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/privacytextitem4"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView71"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/privacytex2titem4"
                            android:textColor="@color/normal_color"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView72"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="18dp"
                            android:text="@string/privacyitem"
                            android:textColor="@color/federal_blue"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/buttonCloseSecurity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/btn_blue"
                    android:text="@string/back"
                    android:textColor="@color/ghost_white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>