<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeBlindFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_blind_home" />
    <item
        android:id="@+id/profileBlindFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_profile"
        android:title="@string/bottom_blind_profile" />
    <item
        android:id="@+id/configBlindFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_employment_test"
        android:title="@string/bottom_blind_tips" />
</menu>