<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileBlindFragment">

    <!-- Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mistyRose">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonDataProfileBlind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:background="@color/mistyRose"
                android:text="@string/dataPerfil"
                android:textColor="#E65100"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonsecurityblind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@color/mistyRose"
                android:text="@string/btnpoliticalsecurity"
                android:textColor="@color/marinian_blue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonaboutblind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@color/mistyRose"
                android:text="@string/btnaboutus"
                android:textColor="@color/marinian_blue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/signOffBlind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@color/mistyRose"
                android:drawableEnd="@drawable/ic_logout"
                android:text="@string/btnlogout"
                android:textColor="@color/fire_brick"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/backBlack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:alpha="0.72"
        android:scaleType="centerCrop"
        android:src="@drawable/backgroudblack" />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/robot_animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="10dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/robot_circle_animation" />
    <include layout="@layout/base_flotante" />

</androidx.constraintlayout.widget.ConstraintLayout>
